--- a/git.html
+++ b/git.html
@@ -81,7 +81,7 @@ git add filename.html
 git add -A
 
 //git commit with "message"
-git commit -m "Message here"
+git commit -a -m "Message here"
 
             </code></pre>
           </section>
