--- a/git.html
+++ b/git.html
@@ -74,6 +74,9 @@ git init
 //for chack git status
 git status
 
+//for ignore file or folder
+touch .gitignore
+
 //for add git one file 
 git add filename.html
 
