--- a/git.html
+++ b/git.html
@@ -74,7 +74,7 @@ git init
 //for chack git status
 git status
 
-//for ignore file or folder
+//for ignore file or folder (open .gitignore file and type fileName or folderName/ )
 touch .gitignore
 
 //for add git one file 
@@ -85,6 +85,15 @@ git add -A
 
 //git commit with "message"
 git commit -a -m "Message here"
+
+//git branch making
+git branch branchName
+
+//switch branch 
+git checkout branchName
+
+//merge branches (have to shich master Branch)
+git merge branchName
 
             </code></pre>
           </section>
