git.html Change

--- a/git.html
+++ b/git.html
@@ -95,6 +95,10 @@ git checkout branchName
 //merge branches (have to shich master Branch)
 git merge branchName
 
+//push git 
+git push -u origin branchName
+
+
             </code></pre>
           </section>
 
