--- a/git.html
+++ b/git.html
@@ -109,7 +109,7 @@ git push -u origin branchName
               <strong>Repository on the command line</strong>
             </div>
             <pre class="language-js"><code>
-//final upload repo
+//full process of new repository 
 git init
 git add -A
 git commit -m "first commit"
