--- a/git.html
+++ b/git.html
@@ -77,7 +77,7 @@ git status
 //for ignore file or folder (open .gitignore file and type fileName or folderName/ )
 touch .gitignore
 
-//for add git one file 
+//for add git single file 
 git add filename.html
 
 //for add git all file
