mobile responsive set

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <li class="nav-link">Css Basic</li>
             </a>
 
-            <a href="html.html">
+            <a href="mediaQuery.html">
               <li class="nav-link">Media Query</li>
             </a>
 
