--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
               ><li class="nav-link">Sass Installation</li></a
             >
             <a href="git.html"><li class="nav-link">Git & GitHub</li></a>
+
+            <a href="pug.html"><li class="nav-link">Use pug Js</li></a>
           </ul>
         </div>
       </main>
