--- a/pug.html
+++ b/pug.html
@@ -40,7 +40,7 @@
                     </div>
                     <pre class="language-js"><code>
 //Install Nxpress
-npm i exoress
+npm i express
 
 //Install Pug
 npm i pug
