--- a/pug.html
+++ b/pug.html
@@ -45,7 +45,7 @@ npm i express
 //Install Pug
 npm i pug
 
-//Install Nodemon
+//Install Nodemon if not install in computar
 npm install -g nodemon
 nodemon filename
 </code></pre>
