--- a/basic.html
+++ b/basic.html
@@ -22,7 +22,7 @@
   <body>
     <nav>
       <img src="img/devtjw.png" class="logo" alt="logo" />
-      <span><b>Tutorial-BasicPage</b></span>
+      <span><b>Tutorial-BasicPages</b></span>
       <span><a href="index.html">Home</a></span>
     </nav>
     <div class="container">
